--- a/src/index.css
+++ b/src/index.css
@@ -35,3 +35,14 @@ code {
   align-items: center;
   flex-direction: column;
 }
+
+.async-container {
+  flex-direction: column;
+  align-content: center;
+  display: flex;
+  max-width: 100vw;
+}
+
+.async-result {
+  overflow-x: scroll;
+}
